cover letter display align fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -667,6 +667,12 @@
   padding: 84px 0px;
 }
 
+.cover-letter-div{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .cover-text-heading {
   color: var(--text-secondary-color);
   font-size: 49px;
@@ -1011,6 +1017,10 @@
     margin-top: 20px;
     margin-left: 0px;
   }
+  .cover-text-heading{
+    font-size: 20px;
+    text-align: center;
+  }
   /* Resume Section */
   .resume-section {
     padding: 80px 0px;
@@ -1054,6 +1064,11 @@
   }
   .background-second{
     padding: 80px 0px;
+  }
+  /* Cover Letter CSS */
+  .cover-text-heading{
+    font-size: 25px;
+    margin: 40px 0px;
   }
 }
 /* Owl Carousel CSS */
